--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 
         <!--==================== SWIPER CSS ====================-->
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/style.css">
@@ -24,7 +24,7 @@
             <div class="nav__menu" id="nav-menu">
               <ul class="nav__list grid">
                 <li class="nav__item">
-                  <a href="#home" class="nav__link">
+                  <a href="#home" class="nav__link active-link">
                     <i class="uil uil-estate nav__icon"></i> Home
                   </a>
                 </li>
@@ -58,6 +58,9 @@
             </div>
 
             <div class="nav__btns">
+              <!-- Theme change button -->
+              <i class="uil uil-moon change-theme" id="theme-button"></i>
+
               <div class="nav__toggle" id="nav-toggle">
                 <i class="uil uil-apps"></i>
               </div>
@@ -166,7 +169,7 @@
                 <span class="section__subtitle">My technical skills</span>
 
                 <div class="skills__container container grid">
-                  <div>
+                  <div id="my-skills">
                     <!--==================== SKILL 1====================-->
                     <div class="skills__content skills__open">
                       <div class="skills__header">
@@ -327,7 +330,7 @@
                   <div class="qualification__content qualification__active" data-content id="education">
                     <!--==================== QUALIFICATION 1 ====================-->
                     <div class="qualification__data">
-                      <div>
+                      <div id="web-development">
                         <h3 class="qualification__title">Web Development</h3>
                         <span class="qualification__subtitle">Le Wagon Bootcamp</span>
                         <div class="qualification__calendar">
@@ -365,7 +368,7 @@
                   <div class="qualification__content" data-content id="work">
                     <!--==================== QUALIFICATION 1 ====================-->
                     <div class="qualification__data">
-                      <div>
+                      <div id="graphic-designer">
                         <h3 class="qualification__title">Graphic Designer</h3>
                         <span class="qualification__subtitle">Mihmandar - Istanbul</span>
                         <div class="qualification__calendar">
@@ -428,19 +431,19 @@
                         <i class="uil uil-times services__modal-close"></i>
 
                         <ul class="services__modal-services grid">
-                          <li class="services__modal-services">
+                          <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
                             <p>I develop the user interface.</p>
                           </li>
-                          <li class="services__modal-services">
+                          <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
                             <p>Web page development.</p>
                           </li>
-                          <li class="services__modal-services">
+                          <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
                             <p>I create ux element interactions.</p>
                           </li>
-                          <li class="services__modal-services">
+                          <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
                             <p>I position your company brand.</p>
                           </li>
@@ -495,16 +498,16 @@
               <h2 class="section__title">Portfolio</h2>
               <span class="section__subtitle">Most recent work</span>
 
-              <div class="portfolio__container container">
-                <div>
+              <div class="portfolio__container container swiper mySwiper">
+                <div class="swiper-wrapper">
 
                   <!--==================== PORTFOLIO 1====================-->
-                  <div class="portfolio__content grid">
+                  <div class="portfolio__content grid swiper-slide">
                     <img src="assets/img/Screenshot 2024-04-01 163050.png" alt="" class="portfolio__img">
 
                     <div class="portfolio__data">
                       <h3 class="portfolio__title">Sync Game App</h3>
-                      <p class="portfolio__descriptiom">Website adaptable to all devices,
+                      <p class="portfolio__description">Website adaptable to all devices,
                         with ui components and animated interactions.</p>
                         <a href="#" class="button button--flex button--small portfolio__button">
                           Demo
@@ -514,12 +517,12 @@
                   </div>
 
                   <!--==================== PORTFOLIO 2====================-->
-                  <div class="portfolio__content grid">
+                  <div class="portfolio__content grid swiper-slide">
                     <img src="assets/img/Screenshot 2024-04-01 163726.png" alt="" class="portfolio__img">
 
                     <div class="portfolio__data">
                       <h3 class="portfolio__title">Airbnb clone</h3>
-                      <p class="portfolio__descriptiom">Website adaptable to all devices,
+                      <p class="portfolio__description">Website adaptable to all devices,
                         with ui components and animated interactions.</p>
                         <a href="#" class="button button--flex button--small portfolio__button">
                           Demo
@@ -527,37 +530,155 @@
                         </a>
                     </div>
                   </div>
-
                 </div>
+
+                <!-- Add Arrows -->
+                <div class="swiper-button-next">
+                  <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-button-prev">
+                  <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-pagination"></div>
               </div>
             </section>
 
             <!--==================== PROJECT IN MIND ====================-->
             <section class="project section">
-
+              <div class="project__bg">
+                <div class="project__container container grid">
+                  <div class="project__data">
+                    <h2 class="project__title">You have a new project</h2>
+                    <p class="project__description">Contact me now and get
+                      a 30% discount on your new project.</p>
+                      <a href="#contact" class="button button--flex button--white">
+                        Contact Me
+                        <i class="uil uil-message project__icon button__icon"></i>
+                      </a>
+                  </div>
+                  <img src="assets/img/rizky_pic_no_bg_right.png" alt="" class="project__img">
+                </div>
+              </div>
             </section>
 
             <!--==================== TESTIMONIAL ====================-->
-            <section class="testimonial section">
+            <!-- <section class="testimonial section">
 
-            </section>
+            </section> -->
 
             <!--==================== CONTACT ME ====================-->
             <section class="contact section" id="contact">
+              <h2 class="section__title">Contact Me</h2>
+              <span class="section__subtitle">Get in touch</span>
 
+              <div class="contact__container container grid">
+                <div>
+                  <div class="contact__information">
+                    <i class="uil uil-phone contact__icon"></i>
+
+                    <div>
+                      <h3 class="contact__title">Call Me</h3>
+                      <span class="contact__subtitle">999-777-666</span>
+                    </div>
+                  </div>
+
+                  <div class="contact__information">
+                    <i class="uil uil-envelope contact__icon"></i>
+
+                    <div>
+                      <h3 class="contact__title">Email</h3>
+                      <span class="contact__subtitle">rizky.wazza@gmail.com</span>
+                    </div>
+                  </div>
+
+                  <div class="contact__information">
+                    <i class="uil uil-map-marker contact__icon"></i>
+
+                    <div>
+                      <h3 class="contact__title">Location</h3>
+                      <span class="contact__subtitle">Germany - Lennestadt</span>
+                    </div>
+                  </div>
+                </div>
+
+                <form action="" class="contact__form grid">
+                  <div class="contact__inputs grid">
+                    <div class="contact__content">
+                      <label for="" class="contact__label">Name</label>
+                      <input type="text" class="contact__input">
+                    </div>
+                    <div class="contact__content">
+                      <label for="" class="contact__label">Email</label>
+                      <input type="email" class="contact__input">
+                    </div>
+                  </div>
+                  <div class="contact__content">
+                    <label for="" class="contact__label">Project</label>
+                    <input type="text" class="contact__input">
+                  </div>
+                  <div class="contact__content">
+                    <label for="" class="contact__label">Message</label>
+                    <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                  </div>
+
+                  <div>
+                    <a href="" class="button button--flex">
+                      Send Message
+                      <i class="uil uil-message button__icon"></i>
+                    </a>
+                  </div>
+                </form>
+              </div>
             </section>
         </main>
 
         <!--==================== FOOTER ====================-->
         <footer class="footer">
+          <div class="footer__bg">
+            <div class="footer__container container grid">
+              <div>
+                <h1 class="footer__title">Rizky</h1>
+                <span class="footer__subtitle">Ruby Developer</span>
+              </div>
 
+              <ul class="footer__links">
+                <li>
+                  <a href="#services" class="footer__link">Services</a>
+                </li>
+                <li>
+                  <a href="#portfolio" class="footer__link">Portfolio</a>
+                </li>
+                <li>
+                  <a href="#contact" class="footer__link">Contact</a>
+                </li>
+              </ul>
+
+              <div class="footer__socials">
+                <a href="https://github.com/rizkyalbiruni" target="_blank" class="footer__social">
+                  <i class="uil uil-github-alt"></i>
+                </a>
+
+                <a href="https://www.linkedin.com/in/rizky-albiruni" target="_blank" class="footer__social">
+                  <i class="uil uil-linkedin"></i>
+                </a>
+
+                <a href="https://lewagon-alumni.slack.com/team/U06FRSU5L0Z" target="_blank" class="footer__social">
+                  <i class="uil uil-slack"></i>
+                </a>
+              </div>
+            </div>
+
+            <p class="footer__copy">&#169; Bedimcode. All right reserved</p>
+          </div>
         </footer>
 
         <!--==================== SCROLL TOP ====================-->
-
+        <a href="" class="scrollup" id="scroll-up">
+          <i class="uil uil-arrow-up scrollup__icon"></i>
+        </a>
 
         <!--==================== SWIPER JS ====================-->
-        <script src=""></script>
+        <script src="assets/js/swiper-bundle.min.js"></script>
 
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.js"></script>
