--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/style.css">
 
-        <title>Responsive Portfolio Website</title>
+        <title>Muhammad Rizky | Full-stack Ruby Developer</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
