--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </li>
                 <li class="nav__item">
                   <a href="#services" class="nav__link">
-                    <i class="uil uil-briefcase-alt nav__icon"></i> Services
+                    <i class="uil uil-briefcase-alt nav__icon"></i> Works
                   </a>
                 </li>
                 <li class="nav__item">
@@ -108,9 +108,9 @@
 
                     <div class="home__data">
                       <h1 class="home__title">Hi, I'am Rizky</h1>
-                      <h3 class="home__subtitle">Ruby Developer</h3>
-                      <p class="home__description">High level experience in web design
-                        and development knowledge, producing quality work.</p>
+                      <h3 class="home__subtitle"><span class="auto-type"></span> Developer </h3>
+                      <p class="home__description">A Ruby developer with essential
+                        skills of programming, encompassing both back-end and front-end tools.</p>
                         <a href="#contact" class="button button--flex">
                           Contact Me <i class="uil uil-message button__icon"></i>
                         </a>
@@ -135,11 +135,13 @@
                 <img src="assets/img/rizky_pic_right.png" alt="" class="about__img">
 
                 <div class="about__data">
-                  <p class="about__description">Web developer, with extensive knowledge
-                    and years of experience, working in web technologies and Ui / Ux design,
-                    delivering quality work.</p>
+                  <p class="about__description">I completed an intensive full-stack
+                    web development bootcamp at Le Wagon, where I immersed myself in a
+                    curriculum covering essential aspects of web development. Not only
+                    mastered the technical aspects but also cultivated a problem-solving
+                    mindset and collaborative work ethic.</p>
 
-                    <div class="about__info">
+                    <!-- <div class="about__info">
                       <div>
                         <span class="about__info-title">08+</span>
                         <span class="about__info-name">Years <br> experience</span>
@@ -152,7 +154,7 @@
                         <span class="about__info-title">05+</span>
                         <span class="about__info-name">Companies <br> worked</span>
                       </div>
-                    </div>
+                    </div> -->
 
                     <div class="about__buttons">
                       <a download="" href="assets/pdf/CV - EN - New.pdf" class="button button--flex">
@@ -176,8 +178,8 @@
                         <i class="uil uil-server-network skills__icon"></i>
 
                         <div>
-                          <h1 class="skills__title">Backend developer</h1>
-                          <span class="skills__subtitle">More than 4 years</span>
+                          <h1 class="skills__title">Backend Development</h1>
+                          <span class="skills__subtitle">Language and tools</span>
                         </div>
 
                         <i class="uil uil-angle-down skills__arrow"></i>
@@ -197,7 +199,7 @@
 
                         <div class="skills__data">
                           <div class="skills__title">
-                            <h3 class="skills__name">Ruby on Rails</h3>
+                            <h3 class="skills__name">Rails</h3>
                             <!-- <span class="skills__number">90%</span> -->
                           </div>
                           <div class="skills__bar">
@@ -253,8 +255,8 @@
                         <i class="uil uil-brackets-curly skills__icon"></i>
 
                         <div>
-                          <h1 class="skills__title">Frontend developer</h1>
-                          <span class="skills__subtitle">More than 4 years</span>
+                          <h1 class="skills__title">Frontend development</h1>
+                          <span class="skills__subtitle">Language and tools</span>
                         </div>
 
                         <i class="uil uil-angle-down skills__arrow"></i>
@@ -294,6 +296,16 @@
                         <div class="skills__data">
                           <div class="skills__title">
                             <h3 class="skills__name">Bootstrap</h3>
+                            <!-- <span class="skills__number">90%</span> -->
+                          </div>
+                          <div class="skills__bar">
+                            <span class="skills__percentage skills__bootstrap"></span>
+                          </div>
+                        </div>
+
+                        <div class="skills__data">
+                          <div class="skills__title">
+                            <h3 class="skills__name">Photoshop</h3>
                             <!-- <span class="skills__number">90%</span> -->
                           </div>
                           <div class="skills__bar">
@@ -409,15 +421,15 @@
 
             <!--==================== SERVICES ====================-->
             <section class="services section" id="services">
-              <h2 class="section__title">Services</h2>
-              <span class="section__subtitle">what i offer</span>
+              <h2 class="section__title">Works</h2>
+              <span class="section__subtitle">my fields of work</span>
 
               <div class="services__container container grid">
                   <!--==================== SERVICES 1 ====================-->
                   <div class="services__content">
                     <div>
-                      <i class="uil uil-web-grid services__icon"></i>
-                      <h3 class="services__title">Ui/Ux <br> Designer</h3>
+                      <i class="uil uil-arrow services__icon"></i>
+                      <h3 class="services__title">Backend <br> Development</h3>
                     </div>
 
                     <span class="button button--flex button--small button--link services__button">
@@ -427,25 +439,33 @@
 
                     <div class="services__modal">
                       <div class="services__modal-content">
-                        <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
+                        <h4 class="services__modal-title">Backend <br> Development</h4>
                         <i class="uil uil-times services__modal-close"></i>
 
                         <ul class="services__modal-services grid">
                           <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I develop the user interface.</p>
+                            <p>Establish an MVC based app with Rails</p>
                           </li>
                           <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>Web page development.</p>
+                            <p>Handling HTTP requests, processing data, and generating dynamic content.</p>
                           </li>
                           <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I create ux element interactions.</p>
+                            <p>Provide necessary validations for user input</p>
                           </li>
                           <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I position your company brand.</p>
+                            <p> Implementing user authentication and authorization mechanisms</p>
+                          </li>
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p>Working with SQL, APIs and databases</p>
+                          </li>
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p> Analyze error messages to fix any possible bugs</p>
                           </li>
                         </ul>
                       </div>
@@ -455,8 +475,8 @@
                   <!--==================== SERVICES 2 ====================-->
                   <div class="services__content">
                     <div>
-                      <i class="uil uil-arrow services__icon"></i>
-                      <h3 class="services__title">Frontend <br> Developer</h3>
+                      <i class="uil uil-web-grid services__icon"></i>
+                      <h3 class="services__title">Frontend <br> Development</h3>
                     </div>
 
                     <span class="button button--flex button--small button--link services__button">
@@ -466,25 +486,25 @@
 
                     <div class="services__modal">
                       <div class="services__modal-content">
-                        <h4 class="services__modal-title">Frontend <br> Developer</h4>
+                        <h4 class="services__modal-title">Frontend <br> Development</h4>
                         <i class="uil uil-times services__modal-close"></i>
 
                         <ul class="services__modal-services grid">
                           <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I develop the user interface.</p>
+                            <p>Translate mockups into interactive interfaces</p>
                           </li>
                           <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>Web page development.</p>
+                            <p>Using Embedded Ruby to generate dynamic HTML</p>
                           </li>
                           <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I create ux element interactions.</p>
+                            <p> Ensuring that web applications are accessible and usable across various devices</p>
                           </li>
                           <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>I position your company brand.</p>
+                            <p>Implementing AJAX to enable dynamic content loading and real-time updates.</p>
                           </li>
                         </ul>
                       </div>
@@ -507,8 +527,8 @@
 
                     <div class="portfolio__data">
                       <h3 class="portfolio__title">Sync Game App</h3>
-                      <p class="portfolio__description">Website adaptable to all devices,
-                        with ui components and animated interactions.</p>
+                      <p class="portfolio__description">A multiplayer game that challenges players to predict the position of a hidden
+                        number within a given range. The game features dynamic gameplay and a chat feature for social interaction after each match.</p>
                         <a href="#" class="button button--flex button--small portfolio__button">
                           Demo
                           <i class="uil uil-arrow-right button__icon"></i>
@@ -522,8 +542,8 @@
 
                     <div class="portfolio__data">
                       <h3 class="portfolio__title">Airbnb clone</h3>
-                      <p class="portfolio__description">Website adaptable to all devices,
-                        with ui components and animated interactions.</p>
+                      <p class="portfolio__description">Working as a team we created an MVC app for renting surfboard, featured
+                        with geocoding to display map and working with Active record as database</p>
                         <a href="#" class="button button--flex button--small portfolio__button">
                           Demo
                           <i class="uil uil-arrow-right button__icon"></i>
@@ -544,13 +564,12 @@
             </section>
 
             <!--==================== PROJECT IN MIND ====================-->
-            <section class="project section">
+            <section class="project section" id="project-section">
               <div class="project__bg">
                 <div class="project__container container grid">
                   <div class="project__data">
                     <h2 class="project__title">You have a new project</h2>
-                    <p class="project__description">Contact me now and get
-                      a 30% discount on your new project.</p>
+                    <p class="project__description">Let's pull up sleeves and build it!</p>
                       <a href="#contact" class="button button--flex button--white">
                         Contact Me
                         <i class="uil uil-message project__icon button__icon"></i>
@@ -574,11 +593,11 @@
               <div class="contact__container container grid">
                 <div>
                   <div class="contact__information">
-                    <i class="uil uil-phone contact__icon"></i>
+                    <i class="uil uil-linkedin-alt contact__icon"></i>
 
                     <div>
-                      <h3 class="contact__title">Call Me</h3>
-                      <span class="contact__subtitle">999-777-666</span>
+                      <h3 class="contact__title">Link Me</h3>
+                      <span class="contact__subtitle">linkedin.com/in/rizky-albiruni</span>
                     </div>
                   </div>
 
@@ -601,31 +620,32 @@
                   </div>
                 </div>
 
-                <form action="" class="contact__form grid">
+                <form action="https://api.web3forms.com/submit" method="POST" class="contact__form grid">
                   <div class="contact__inputs grid">
                     <div class="contact__content">
-                      <label for="" class="contact__label">Name</label>
-                      <input type="text" class="contact__input">
+                      <input type="hidden" name="access_key" value="3b0f7676-f93d-45c1-bb79-8e44341eb02d">
+                      <label for="name" class="contact__label">Name</label>
+                      <input type="text" name="name" class="contact__input" required>
                     </div>
                     <div class="contact__content">
-                      <label for="" class="contact__label">Email</label>
-                      <input type="email" class="contact__input">
+                      <label for="email" class="contact__label">Email</label>
+                      <input type="email" name="email" class="contact__input" required>
                     </div>
                   </div>
                   <div class="contact__content">
-                    <label for="" class="contact__label">Project</label>
+                    <label for="" class="contact__label">About</label>
                     <input type="text" class="contact__input">
                   </div>
                   <div class="contact__content">
-                    <label for="" class="contact__label">Message</label>
-                    <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                    <label for="message" class="contact__label">Message</label>
+                    <textarea name="message" id="" cols="0" rows="7" class="contact__input" required></textarea>
                   </div>
 
                   <div>
-                    <a href="" class="button button--flex">
+                    <button type="submit" class="button button--flex">
                       Send Message
                       <i class="uil uil-message button__icon"></i>
-                    </a>
+                    </button>
                   </div>
                 </form>
               </div>
@@ -678,7 +698,16 @@
 
         <!--==================== SWIPER JS ====================-->
         <script src="assets/js/swiper-bundle.min.js"></script>
+        <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
+        <script>
+          var typed = new Typed(".auto-type", {
+            strings: ["Full Stack", "Ruby", "Rails"],
+            typeSpeed: 200,
+            backSpeed: 70,
+            loop: true
+          })
+        </script>
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.js"></script>
     </body>
