--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                       </div>
                     </div>
                     <!--==================== SKILL 2====================-->
-                    <div class="skills__content skills__close">
+                    <div class="skills__content skills__open">
                       <div class="skills__header">
                         <i class="uil uil-brackets-curly skills__icon"></i>
 
