--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
                         <div class="skills__data">
                           <div class="skills__title">
-                            <h3 class="skills__name">Git</h3>
+                            <h3 class="skills__name">Stimulus</h3>
                             <!-- <span class="skills__number">90%</span> -->
                           </div>
                           <div class="skills__bar">
@@ -244,6 +244,16 @@
                           </div>
                           <div class="skills__bar">
                             <span class="skills__percentage skills__heroku"></span>
+                          </div>
+                        </div>
+
+                        <div class="skills__data">
+                          <div class="skills__title">
+                            <h3 class="skills__name">Git</h3>
+                            <!-- <span class="skills__number">90%</span> -->
+                          </div>
+                          <div class="skills__bar">
+                            <span class="skills__percentage skills__git"></span>
                           </div>
                         </div>
 
