--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </div> -->
 
                     <div class="about__buttons">
-                      <a download="" href="assets/pdf/CV - EN - New.pdf" class="button button--flex">
+                      <a download="" href="assets/pdf/CV - EN - New(7mb).pdf" class="button button--flex">
                         Download CV<i class="uil uil-download-alt button__icon"></i>
                       </a>
                     </div>
