--- a/index.html
+++ b/index.html
@@ -356,6 +356,139 @@
               </div>
             </section>
 
+            <!--==================== ABOUT ====================-->
+            <section class="about section" id="about">
+              <h2 class="section__title">About Me</h2>
+              <span class="section__subtitle">My introdution</span>
+
+              <div class="about__container container grid">
+                <img src="assets/img/20240411_111201.jpg" alt="" class="about__img">
+
+                <div class="about__data">
+                  <p class="about__description">I completed an intensive full-stack
+                    web development bootcamp at Le Wagon, where I immersed myself in a
+                    curriculum covering essential aspects of web development. Not only
+                    mastered the technical aspects but also cultivated a problem-solving
+                    mindset and collaborative work ethic.</p>
+
+                    <!-- <div class="about__info">
+                      <div>
+                        <span class="about__info-title">08+</span>
+                        <span class="about__info-name">Years <br> experience</span>
+                      </div>
+                      <div>
+                        <span class="about__info-title">20+</span>
+                        <span class="about__info-name">Completed <br> project</span>
+                      </div>
+                      <div>
+                        <span class="about__info-title">05+</span>
+                        <span class="about__info-name">Companies <br> worked</span>
+                      </div>
+                    </div> -->
+
+                    <div class="about__buttons">
+                      <a download="" href="assets/pdf/CV - EN - New_compressed.pdf" class="button button--flex">
+                        Download CV<i class="uil uil-download-alt button__icon"></i>
+                      </a>
+                    </div>
+                </div>
+              </div>
+            </section>
+
+            <!--==================== SERVICES ====================-->
+            <section class="services section" id="services">
+              <h2 class="section__title">Works</h2>
+              <span class="section__subtitle">my fields of work</span>
+
+              <div class="services__container container grid">
+                  <!--==================== SERVICES 1 ====================-->
+                  <div class="services__content">
+                    <div>
+                      <i class="uil uil-arrow services__icon"></i>
+                      <h3 class="services__title">Backend <br> Development</h3>
+                    </div>
+
+                    <span class="button button--flex button--small button--link services__button">
+                      View more
+                      <i class="uil uil-arrow-right button__icon"></i>
+                    </span>
+
+                    <div class="services__modal">
+                      <div class="services__modal-content">
+                        <h4 class="services__modal-title">Backend <br> Development</h4>
+                        <i class="uil uil-times services__modal-close"></i>
+
+                        <ul class="services__modal-services grid">
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p>Establish an MVC based app with Rails</p>
+                          </li>
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p>Handling HTTP requests, processing data, and generating dynamic content.</p>
+                          </li>
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p>Provide necessary validations for user input</p>
+                          </li>
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p> Implementing user authentication and authorization mechanisms</p>
+                          </li>
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p>Working with SQL, APIs and databases</p>
+                          </li>
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p> Analyze error messages to fix any possible bugs</p>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!--==================== SERVICES 2 ====================-->
+                  <div class="services__content">
+                    <div>
+                      <i class="uil uil-web-grid services__icon"></i>
+                      <h3 class="services__title">Frontend <br> Development</h3>
+                    </div>
+
+                    <span class="button button--flex button--small button--link services__button">
+                      View more
+                      <i class="uil uil-arrow-right button__icon"></i>
+                    </span>
+
+                    <div class="services__modal">
+                      <div class="services__modal-content">
+                        <h4 class="services__modal-title">Frontend <br> Development</h4>
+                        <i class="uil uil-times services__modal-close"></i>
+
+                        <ul class="services__modal-services grid">
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p>Translate mockups into interactive interfaces</p>
+                          </li>
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p>Using Embedded Ruby to generate dynamic HTML</p>
+                          </li>
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p> Ensuring that web applications are accessible and usable across various devices</p>
+                          </li>
+                          <li class="services__modal-service">
+                            <i class="uil uil-check-circle services__modal-icon"></i>
+                            <p>Implementing AJAX to enable dynamic content loading and real-time updates.</p>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+            </section>
+
             <!--==================== QUALIFICATION ====================-->
             <section class="qualification section">
               <h2 class="section__title">Qualification</h2>
@@ -453,140 +586,6 @@
 
                   </div>
                 </div>
-              </div>
-            </section>
-
-            <!--==================== ABOUT ====================-->
-            <section class="about section" id="about">
-              <h2 class="section__title">About Me</h2>
-              <span class="section__subtitle">My introdution</span>
-
-              <div class="about__container container grid">
-                <img src="assets/img/20240411_111201.jpg" alt="" class="about__img">
-
-                <div class="about__data">
-                  <p class="about__description">I completed an intensive full-stack
-                    web development bootcamp at Le Wagon, where I immersed myself in a
-                    curriculum covering essential aspects of web development. Not only
-                    mastered the technical aspects but also cultivated a problem-solving
-                    mindset and collaborative work ethic.</p>
-
-                    <!-- <div class="about__info">
-                      <div>
-                        <span class="about__info-title">08+</span>
-                        <span class="about__info-name">Years <br> experience</span>
-                      </div>
-                      <div>
-                        <span class="about__info-title">20+</span>
-                        <span class="about__info-name">Completed <br> project</span>
-                      </div>
-                      <div>
-                        <span class="about__info-title">05+</span>
-                        <span class="about__info-name">Companies <br> worked</span>
-                      </div>
-                    </div> -->
-
-                    <div class="about__buttons">
-                      <a download="" href="assets/pdf/CV - EN - New(7mb).pdf" class="button button--flex">
-                        Download CV<i class="uil uil-download-alt button__icon"></i>
-                      </a>
-                    </div>
-                </div>
-              </div>
-            </section>
-
-
-            <!--==================== SERVICES ====================-->
-            <section class="services section" id="services">
-              <h2 class="section__title">Works</h2>
-              <span class="section__subtitle">my fields of work</span>
-
-              <div class="services__container container grid">
-                  <!--==================== SERVICES 1 ====================-->
-                  <div class="services__content">
-                    <div>
-                      <i class="uil uil-arrow services__icon"></i>
-                      <h3 class="services__title">Backend <br> Development</h3>
-                    </div>
-
-                    <span class="button button--flex button--small button--link services__button">
-                      View more
-                      <i class="uil uil-arrow-right button__icon"></i>
-                    </span>
-
-                    <div class="services__modal">
-                      <div class="services__modal-content">
-                        <h4 class="services__modal-title">Backend <br> Development</h4>
-                        <i class="uil uil-times services__modal-close"></i>
-
-                        <ul class="services__modal-services grid">
-                          <li class="services__modal-service">
-                            <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>Establish an MVC based app with Rails</p>
-                          </li>
-                          <li class="services__modal-service">
-                            <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>Handling HTTP requests, processing data, and generating dynamic content.</p>
-                          </li>
-                          <li class="services__modal-service">
-                            <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>Provide necessary validations for user input</p>
-                          </li>
-                          <li class="services__modal-service">
-                            <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p> Implementing user authentication and authorization mechanisms</p>
-                          </li>
-                          <li class="services__modal-service">
-                            <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>Working with SQL, APIs and databases</p>
-                          </li>
-                          <li class="services__modal-service">
-                            <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p> Analyze error messages to fix any possible bugs</p>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!--==================== SERVICES 2 ====================-->
-                  <div class="services__content">
-                    <div>
-                      <i class="uil uil-web-grid services__icon"></i>
-                      <h3 class="services__title">Frontend <br> Development</h3>
-                    </div>
-
-                    <span class="button button--flex button--small button--link services__button">
-                      View more
-                      <i class="uil uil-arrow-right button__icon"></i>
-                    </span>
-
-                    <div class="services__modal">
-                      <div class="services__modal-content">
-                        <h4 class="services__modal-title">Frontend <br> Development</h4>
-                        <i class="uil uil-times services__modal-close"></i>
-
-                        <ul class="services__modal-services grid">
-                          <li class="services__modal-service">
-                            <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>Translate mockups into interactive interfaces</p>
-                          </li>
-                          <li class="services__modal-service">
-                            <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>Using Embedded Ruby to generate dynamic HTML</p>
-                          </li>
-                          <li class="services__modal-service">
-                            <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p> Ensuring that web applications are accessible and usable across various devices</p>
-                          </li>
-                          <li class="services__modal-service">
-                            <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>Implementing AJAX to enable dynamic content loading and real-time updates.</p>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
               </div>
             </section>
 
