link to portfolio updated

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <h3 class="portfolio__title">Sync Game App</h3>
                                 <p class="portfolio__description">A multiplayer game that challenges players to predict the position of a hidden
                                   number within a given range. The game features dynamic gameplay and a chat feature for social interaction after each match.</p>
-                                  <a href="https://www.sync.rodeo/" target="_blank" class="button button--flex button--small portfolio__button">
+                                  <a href="https://github.com/rizkyalbiruni/sync" target="_blank" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                   </a>
@@ -158,7 +158,7 @@
                                 <h3 class="portfolio__title">Airbnb clone</h3>
                                 <p class="portfolio__description">Working as a team we created an MVC app for renting surfboard, featured
                                   with geocoding to display map and working with Active record as database</p>
-                                  <a href="https://surfing-the-web-4ea04c8e9eec.herokuapp.com/" target="_blank" class="button button--flex button--small portfolio__button">
+                                  <a href="https://github.com/rizkyalbiruni/surfing_the_web" target="_blank" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                   </a>
