--- a/index.html
+++ b/index.html
@@ -152,13 +152,14 @@
 
                             <!--==================== PORTFOLIO 2====================-->
                             <div class="portfolio__content grid swiper-slide">
-                              <img src="assets/img/Screenshot 2024-04-01 163726.png" alt="" class="portfolio__img">
+                              <img src="assets/img/Screenshot 2024-05-09 102303.png" alt="" class="portfolio__img">
 
                               <div class="portfolio__data">
-                                <h3 class="portfolio__title">Airbnb clone</h3>
-                                <p class="portfolio__description">Working as a team we created an MVC app for renting surfboard, featured
-                                  with geocoding to display map and working with Active record as database</p>
-                                  <a href="https://github.com/rizkyalbiruni/surfing_the_web" target="_blank" class="button button--flex button--small portfolio__button">
+                                <h3 class="portfolio__title">Surfing The Web</h3>
+                                <p class="portfolio__description">A dynamic MVC application tailored for surfboard enthusiasts. Our platform integrates
+                                  geocoding to provide users with interactive maps. Leveraging the power of Active Record, our database management system ensures efficient
+                                  data handling, enabling smooth user experience. Utilizing Cloudinary integration, users can effortlessly upload photos.</p>
+                                  <a href="https://github.com/CharlieWHWilson/surfing_the_web" target="_blank" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                   </a>
