--- a/index.html
+++ b/index.html
@@ -181,6 +181,25 @@
                                   </a>
                               </div>
                             </div>
+
+                             <!--==================== PORTFOLIO 4====================-->
+                             <div class="portfolio__content grid swiper-slide">
+                              <img src="assets/img/Screenshot 2024-05-09 145539.png" alt="" class="portfolio__img">
+
+                              <div class="portfolio__data">
+                                <h3 class="portfolio__title">AI Chatbot for E-Commerce</h3>
+                                <p class="portfolio__description">Implementing an AI chatbot into an Shopify store to enhance user experience.
+                                  The chatbot intelligently analyzes user input and provides personalized product
+                                  suggestions, creating an interactive shopping experience for customer</p>
+                                  <small>password : chatbot</small>
+                                  <br>
+                                  <br>
+                                  <a href="https://quickstart-f6353c2e.myshopify.com/" target="_blank" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                  </a>
+                              </div>
+                            </div>
                           </div>
 
                           <!-- Add Arrows -->
@@ -248,7 +267,7 @@
 
                       <div class="skills__data">
                         <div class="skills__title">
-                          <h3 class="skills__name">Stimulus</h3>
+                          <h3 class="skills__name">MVC -OOP</h3>
                           <!-- <span class="skills__number">90%</span> -->
                         </div>
                         <div class="skills__bar">
@@ -304,7 +323,7 @@
                     <div class="skills__list grid">
                       <div class="skills__data">
                         <div class="skills__title">
-                          <h3 class="skills__name">HTML</h3>
+                          <h3 class="skills__name">HTML.erb</h3>
                           <!-- <span class="skills__number">90%</span> -->
                         </div>
                         <div class="skills__bar">
@@ -314,7 +333,7 @@
 
                       <div class="skills__data">
                         <div class="skills__title">
-                          <h3 class="skills__name">CSS</h3>
+                          <h3 class="skills__name">sCSS</h3>
                           <!-- <span class="skills__number">90%</span> -->
                         </div>
                         <div class="skills__bar">
@@ -329,6 +348,16 @@
                         </div>
                         <div class="skills__bar">
                           <span class="skills__percentage skills__js"></span>
+                        </div>
+                      </div>
+
+                      <div class="skills__data">
+                        <div class="skills__title">
+                          <h3 class="skills__name">Stimulus.js</h3>
+                          <!-- <span class="skills__number">90%</span> -->
+                        </div>
+                        <div class="skills__bar">
+                          <span class="skills__percentage skills__bootstrap"></span>
                         </div>
                       </div>
 
@@ -367,11 +396,10 @@
                 <img src="assets/img/20240411_111201.jpg" alt="" class="about__img">
 
                 <div class="about__data">
-                  <p class="about__description">I completed an intensive full-stack
-                    web development bootcamp at Le Wagon, where I immersed myself in a
-                    curriculum covering essential aspects of web development. Not only
-                    mastered the technical aspects but also cultivated a problem-solving
-                    mindset and collaborative work ethic.</p>
+                  <p class="about__description">Proficient full-stack developer with a comprehensive skill set. Skilled in crafting
+                    high-quality code and proficient in leveraging Ruby and Rails. Passionate about
+                    continuous learning. I value collaboration and teamwork, recognizing the
+                    power of collective innovation in achieving goals.</p>
 
                     <!-- <div class="about__info">
                       <div>
